## v0.6.0 (31 December 2020)
* Use binding_of_caller version for Ruby 3.0 (#55)
* Rename 'show-stack' to 'stack' (#50, #8)

## v0.5.1 (21 May 2020)
* Fix exception in started hook

## v0.5.0 (21 May 2020)
* Should fix most deprecation warnings as of release
* Require Pry 0.13
* Fix Pry#_pry_ => #pry_instance deprecation

## v0.4.11 (21 May 2020)
* Special branch for Ruby 2.5
* Fix Pry 0.13+ deprecations and broken `show-stack`